Fix spacing between sections and articles and navbar

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -57,7 +57,7 @@ body {
     //max-width: 1200px;
     max-width: 90%;
     margin: 0 auto;
-    padding: 1rem 1rem;
+    //padding: 1rem 1rem;
 }
 
 @media (max-width: 768px) {
